--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@firebase/storage": "^0.9.9",
     "@hookform/resolvers": "^2.9.8",
     "@mui/icons-material": "^5.10.6",
+    "@mui/lab": "^5.0.0-alpha.102",
     "@mui/material": "^5.10.7",
     "@mui/styled-engine-sc": "^5.10.6",
     "@mui/x-data-grid": "^5.17.5",
