--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-swipeable-views": "^0.14.0",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
+    "swiper": "^8.4.3",
     "uninstall": "0.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
